navbar column display spacing problem fixed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -154,14 +154,25 @@
     display: block;
     left: 1%;
   }
+
   .navbar-search {
     margin: 16px 0;
   }
+}
+
+@media screen and (max-width: 810px) {
   .navbar-profile.active {
-    width: 300px;
+    width: 240px;
+    height: 240px;
+    border-radius: 24px;
   }
   .navbar-profile .profile-items ul li {
     display: block;
-    width: 300px;
+    width: 180px;
+    padding: 0;
   }
+  .navbar-profile .profile-items ul li:first-child {
+    padding: 0;
+  }
+
 }
